# stirred

./: .gitignore
crates/markov/: Cargo.toml
crates/markov/src/: brain.rs  lib.rs  link.rs  set.rs  token.rs
crates/serve_brain/: Cargo.toml
crates/serve_brain/src/: handlers.rs  lib.rs  messaging.rs  request.rs  response.rs  state.rs
crates/shaken/: Cargo.toml
crates/shaken/snapshots/: shaken__modules__builtin__tests__bot_uptime@bot_uptime.snap  shaken__modules__builtin__tests__hello@hello.snap  shaken__modules__builtin__tests__help@help-2.snap  shaken__modules__builtin__tests__help@help-3.snap  shaken__modules__builtin__tests__help@help.snap.new  shaken__modules__builtin__tests__list_commands@list_commands.snap  shaken__modules__builtin__tests__list_commands@list_commands.snap.new  shaken__modules__builtin__tests__say_hello@say_hello-4.snap  shaken__modules__builtin__tests__say_hello@say_hello.snap  shaken__modules__builtin__tests__theme@theme.snap  shaken__modules__builtin__tests__time@time.snap  shaken__modules__builtin__tests__uptime@uptime.snap  shaken__modules__crates__tests__lookup@crates.snap  shaken__modules__user_defined__tests__alias success@alias.snap  shaken__modules__user_defined__tests__already exists@alias.snap  shaken__modules__user_defined__tests__does !foo@alias.snap  shaken__modules__user_defined__tests__doesnt !bar@alias.snap  shaken__modules__user_defined__tests__duplicate@add.snap  shaken__modules__user_defined__tests__duplicate@add.snap.new  shaken__modules__user_defined__tests__help@add.snap  shaken__modules__user_defined__tests__help@remove.snap  shaken__modules__user_defined__tests__help@update.snap  shaken__modules__user_defined__tests__missing body@add.snap  shaken__modules__user_defined__tests__missing leader@remove.snap  shaken__modules__user_defined__tests__not found@alias.snap  shaken__modules__user_defined__tests__not found@remove.snap  shaken__modules__user_defined__tests__not found@remove.snap.new  shaken__modules__user_defined__tests__success add@add.snap  shaken__modules__user_defined__tests__success@remove.snap  shaken__modules__user_defined__tests__success@update.snap  shaken__modules__user_defined__tests__unauthorized@alias.snap
crates/shaken/src/: arguments.rs  binding.rs  callable.rs  config.rs  error.rs  format.rs  help.rs  http.rs  lib.rs  persist.rs  queue.rs  serde.rs  state.rs  system_time.rs  testing.rs  util.rs
crates/shaken/src/irc/: conn.rs  mod.rs  privmsg.rs  tags.rs
crates/shaken/src/modules/: another_viewer.rs  builtin.rs  mod.rs
crates/shaken/src/modules/crates/: data.rs  mod.rs  tests.rs
crates/shaken/src/modules/spotify/: client.rs  data.rs  mod.rs
crates/shaken/src/modules/user_defined/: mod.rs  state.rs  tests.rs
crates/shaken/src/twitch/: client.rs  data.rs  mod.rs  oauth.rs
crates/train_brain/: Cargo.toml
crates/train_brain/src/: main.rs
(+1 files in other folders)
