[package]
name    = "brain"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
markov = { path = "../markov" }

anyhow            = "1.0.59"
async-bincode     = "0.7.0"
async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
axum              = "0.5.13"
fastrand          = "1.8.0"
gumdrop           = "0.8.1"
serde             = { version = "1.0.141", features = ["derive"] }
tokio             = { version = "1.20.1", features = ["rt", "sync", "fs", "io-util", "macros"] }
futures-sink = "0.3.21"
futures = { version = "0.3.21", default-features = false, features = ["std"] }
zstd = "0.11.2"
bincode = "1.3.3"
