[package]
name        = "shaken"
version     = "0.1.0"
edition     = "2021"
license     = "0BSD"
default-run = "shaken"

[dependencies]
alto_logger     = "0.3.7"
anyhow          = "1.0.59"
fastrand        = "1.8.0"
log             = "0.4.17"
once_cell       = "1.13.0"
# TODO if we remove ureq, we can switch to reqwest
rspotify        = { version = "0.11.5", features = ["cli", "client-ureq", "ureq-rustls-tls"], default-features = false }
serde           = { version = "1.0.141", features = ["derive"] }
serde_json      = "1.0.82"
simple_env_load = "0.2.0"
time            = { version = "0.3.12", features = ["parsing", "local-offset"] }
# TODO remove this if we bring in serenity
ureq            = { version = "2.5.0", features = ["json"] }
uuid            = { version = "1.1.2", default-features = false, features = ["std", "v4", "serde", "fast-rng"] }
tokio           = { version = "1.20.1", features = ["net", "macros", "rt", "io-util", "sync", "time", "fs"] }

fastrand_ext = { git = "https://github.com/museun/fastrand_ext", version = "0.1.0" }
what_theme   = { git = "https://github.com/museun/what_theme", version = "0.1.0" }
regex = "1.6.0"
url = "2.2.2"

[dev-dependencies]
insta    = { version = "1.17.1", features = ["filters"] }
tokio    = { version = "1.20.1", features = ["test-util"] }
wiremock = "0.5.13"
