[package]
name = "train_brain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "1.0.59"
bincode            = "1.3.3"
gumdrop            = "0.8.1"
indicatif          = { version = "0.17.0", features = ["vt100", "improved_unicode"] }
serde              = { version = "1.0.141", features = ["derive"] }
snap               = "1.0.5"

markov = { path = "../markov" }
